boreal/tests/assets/invalid_files/parsing/jump_unbounded_in_alternation.yar
// [error: unbounded jumps not allowed inside alternations (|)]
rule a {
    strings:
        $a = { ( CD | AB [-] 85 ) }
    condition:
        $a
}
